ui/ux: fix flickering icons when resizing explorer

--- a/packages/core/src/browser/style/view-container.css
+++ b/packages/core/src/browser/style/view-container.css
@@ -188,3 +188,7 @@
   .theia-view-container-part-title {
   display: flex;
 }
+
+.no-pointer-events {
+  pointer-events: none;
+}
